[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Keqima.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/neblina.png" type="Texture" id=3]
[ext_resource path="res://scripts/ParallaxBackground.gd" type="Script" id=4]
[ext_resource path="res://assets/deep-blue-texture-background.jpg" type="Texture" id=5]
[ext_resource path="res://fonts/A_Font_with_Serifs.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://fonts/fuenteMenu.tres" type="DynamicFont" id=7]
[ext_resource path="res://sound/Night of the Streets.mp3" type="AudioStream" id=8]
[ext_resource path="res://sound/button press 1.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=4]
size = 150
outline_size = 1
outline_color = Color( 0.270588, 0.258824, 0.211765, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.117647, 0.109804, 0.109804, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.45098, 0.411765, 0.352941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0.980392, 0.964706, 0.964706, 0.364706 )
shadow_size = 10
shadow_offset = Vector2( 5, 5 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 6 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 513, 261 )
scale = Vector2( 0.200875, 0.200875 )
texture = ExtResource( 5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1028.9, 0 )

[node name="neblina" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 515, 520 )
scale = Vector2( 1.08696, 1.08696 )
texture = ExtResource( 3 )

[node name="neblina2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 513, 80 )
rotation = 3.14159
scale = Vector2( 1.08828, 1.08828 )
texture = ExtResource( 3 )

[node name="Titulo" type="Label" parent="."]
margin_left = 240.0
margin_top = 202.0
margin_right = 814.0
margin_bottom = 370.0
custom_colors/font_color_shadow = Color( 0.323242, 0.304428, 0.276208, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "Nightmares"
align = 1
valign = 1

[node name="InfoPersonal" type="Label" parent="."]
margin_left = 766.0
margin_top = 571.0
margin_right = 1011.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 10 )
text = "TP - Programacion3 - Matias Navaro"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 53.0
margin_top = -197.0
margin_right = 187.0
margin_bottom = -41.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 134.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../QuitButton")
custom_colors/font_color_pressed = Color( 0.392157, 0.352941, 0.294118, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Start"
flat = true
expand_icon = true

[node name="OptionButton" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 134.0
margin_bottom = 76.0
custom_colors/font_color_pressed = Color( 0.392157, 0.352941, 0.294118, 1 )
custom_fonts/font = SubResource( 2 )
text = "Opciones"
flat = true
expand_icon = true

[node name="Obj" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 134.0
margin_bottom = 116.0
custom_colors/font_color_pressed = Color( 0.392157, 0.352941, 0.294118, 1 )
custom_fonts/font = SubResource( 2 )
text = "Objetivo"
flat = true
expand_icon = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 134.0
margin_bottom = 156.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_colors/font_color_pressed = Color( 0.392157, 0.352941, 0.294118, 1 )
custom_fonts/font = SubResource( 3 )
text = "Salir"
flat = true
expand_icon = true

[node name="opciones" type="Panel" parent="."]
visible = false
self_modulate = Color( 0.952941, 0.909804, 0.909804, 1 )
margin_left = 227.0
margin_top = 31.0
margin_right = 857.0
margin_bottom = 557.0
custom_styles/panel = SubResource( 8 )

[node name="sonido music" type="Label" parent="opciones"]
margin_left = 139.0
margin_top = 63.0
margin_right = 322.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 5 )
text = "Sonido Musica"

[node name="sonido fx" type="Label" parent="opciones"]
margin_left = 172.0
margin_top = 107.0
margin_right = 289.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 6 )
text = "Sonido FX"

[node name="infoMov" type="Label" parent="opciones"]
margin_left = 61.0
margin_top = 191.0
margin_right = 575.0
margin_bottom = 419.0
custom_fonts/font = SubResource( 7 )
text = "Movimiento Player: Flechas direccionales

Linterna encendida: Espacio

Puasar Juego: Escape

Reiniciar Juego: Tecla R"

[node name="music" type="Button" parent="opciones"]
margin_left = 324.0
margin_top = 57.0
margin_right = 450.0
margin_bottom = 93.0
focus_neighbour_top = NodePath("../volver")
custom_colors/font_color_pressed = Color( 0.392157, 0.352941, 0.294118, 1 )
custom_fonts/font = ExtResource( 7 )
text = "on"
flat = true
expand_icon = true

[node name="fx" type="Button" parent="opciones"]
margin_left = 324.0
margin_top = 99.0
margin_right = 450.0
margin_bottom = 135.0
custom_colors/font_color_pressed = Color( 0.392157, 0.352941, 0.294118, 1 )
custom_fonts/font = SubResource( 2 )
text = "on"
flat = true
expand_icon = true

[node name="volver" type="Button" parent="opciones"]
margin_left = 414.0
margin_top = 473.0
margin_right = 599.0
margin_bottom = 509.0
focus_neighbour_bottom = NodePath("../music")
custom_colors/font_color_pressed = Color( 0.392157, 0.352941, 0.294118, 1 )
custom_fonts/font = SubResource( 3 )
text = "Volver a Menu"
flat = true
expand_icon = true

[node name="SoundButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 4.0

[node name="musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="Objetivo" type="Panel" parent="."]
visible = false
self_modulate = Color( 0.952941, 0.909804, 0.909804, 1 )
margin_left = 227.0
margin_top = 31.0
margin_right = 857.0
margin_bottom = 557.0
custom_styles/panel = SubResource( 8 )

[node name="niveles" type="Label" parent="Objetivo"]
margin_left = 85.0
margin_top = 43.0
margin_right = 558.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 9 )
text = "Level 1:  Encuentra la salida
y Escapa de los monstrous 
que desean tu sue√±o profundo

Level 2: Encuentra la llave, escapa
de los monstruos y encuentra
el refugio eterno para salir  
temporalmente de esta pesadilla."

[node name="volver" type="Button" parent="Objetivo"]
margin_left = 415.0
margin_top = 473.0
margin_right = 600.0
margin_bottom = 509.0
focus_neighbour_bottom = NodePath("../music")
custom_colors/font_color_pressed = Color( 0.392157, 0.352941, 0.294118, 1 )
custom_fonts/font = SubResource( 3 )
text = "Volver a Menu"
flat = true
expand_icon = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Obj" to="." method="_on_Obj_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="opciones/music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="opciones/fx" to="." method="_on_fx_pressed"]
[connection signal="pressed" from="opciones/volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="Objetivo/volver" to="." method="_on_volver_pressed"]
